; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_bhyvegc.c_bhyvegc_get_image.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_bhyvegc.c_bhyvegc_get_image.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bhyvegc_image = type { i32 }
%struct.bhyvegc = type { %struct.bhyvegc_image* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.bhyvegc_image* @bhyvegc_get_image(%struct.bhyvegc* %0) #0 {
  %2 = alloca %struct.bhyvegc_image*, align 8
  %3 = alloca %struct.bhyvegc*, align 8
  store %struct.bhyvegc* %0, %struct.bhyvegc** %3, align 8
  %4 = load %struct.bhyvegc*, %struct.bhyvegc** %3, align 8
  %5 = icmp eq %struct.bhyvegc* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store %struct.bhyvegc_image* null, %struct.bhyvegc_image** %2, align 8
  br label %11

7:                                                ; preds = %1
  %8 = load %struct.bhyvegc*, %struct.bhyvegc** %3, align 8
  %9 = getelementptr inbounds %struct.bhyvegc, %struct.bhyvegc* %8, i32 0, i32 0
  %10 = load %struct.bhyvegc_image*, %struct.bhyvegc_image** %9, align 8
  store %struct.bhyvegc_image* %10, %struct.bhyvegc_image** %2, align 8
  br label %11

11:                                               ; preds = %7, %6
  %12 = load %struct.bhyvegc_image*, %struct.bhyvegc_image** %2, align 8
  ret %struct.bhyvegc_image* %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
